2013-04-30  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_groups.php: Fix a little the
	groups view style

	* operation/agentes/estado_generalagente.php: Fix the 
	layout of the agent main view table when url addres is 
	setted for bug #3609651

	* general/header.php: Remove completly the link of
	the autorefresh button from the header when is disabled
	to avoid confusing

2013-04-29  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_ui.php: Fixed various styles of
	header icons and tabs

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/update_manager/update_pandora.php: cleaned source code
	style.
	
	* include/functions_events.php,
	operation/events/events.build_table.php: show columns by group in
	metaconsole.
	
	Fixes: #3609374

2013-04-29  Sergio Martin <sergio.martin@artica.es>

	* images/mod_async_proc.png
	images/mod_string.png
	images/mod_snmp_proc.png
	images/mod_data.png
	images/mod_tcp_inc.png
	images/mod_web_data.png
	images/mod_icmp_data.png
	images/mod_async_string.png
	images/mod_image_png.png
	images/mod_proc.png
	images/mod_snmp_string.png
	images/mod_tcp_data.png
	images/mod_web_proc.png
	images/mod_icmp_proc.png
	images/mod_image_jpg.png
	images/mod_log4x.png
	images/mod_async_inc.png
	images/mod_async_data.png
	images/mod_data_inc.png
	images/mod_keepalive.png
	images/mod_snmp_inc.png
	images/mod_snmp_data.png
	images/mod_tcp_string.png
	images/mod_tcp_proc.png: Change module types icons
	to new style

2013-04-29  Sergio Martin <sergio.martin@artica.es>

	* images/gis_map/icons/star.default.png
	images/gis_map/icons/cross.warning.png
	images/gis_map/icons/star.bad.png
	images/gis_map/icons/cross.ok.png
	images/gis_map/icons/marker.default.png
	images/gis_map/icons/square_marker.warning.png
	images/gis_map/icons/circle.warning.png
	images/gis_map/icons/marker.bad.png
	images/gis_map/icons/square_marker.ok.png
	images/gis_map/icons/circle.ok.png